change index html to show the main container

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,32 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+        <p>Random txt to expand the main</p>
+
+
     </main>
 
   </body>
