--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,8 @@
     <main class="container">
         <section class="new-tweet">
             <h2>Compose Tweet</h2>
-            <form action="/tweets/" method="POST">
+            <!-- <form action="/tweets/" method="POST"> -->
+          <form id="tweetAjax" action="/tweets" method="POST">
                 <textarea name="text" placeholder="What are you humming about?"></textarea>
                 <input type="submit" value="Tweet">
                 <span class="counter">140</span>
